# calliscord

./: .gitignore  README.md  build.sh  cgi.cal  discord.cal  json.cal  main.cal  make_data.py  random.cal  take.cal  take_data.cal  util.cal  verify.cal
c_lib/: clone.sh  json.c  meson.build
